--- a/index.html
+++ b/index.html
@@ -19,17 +19,56 @@
 
 <body>
     <section class="top-banner">
-    <div class="half-width">
-    <h1>Welcome To</h1>
-    <h1><span class="hightlate">My website</span> World</h1>
-    <h3>World class web-development</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam accusantium libero vitae magnam, non possimus, molestiae quasi, provident reiciendis deleniti quaerat nostrum sapiente enim? Quos soluta cupiditate delectus facilis tempore.</p>
-    <button>Hide me</button>
-</div>
-<div class="half-width">
-<img src="images/jhankar2.png" alt="">
-</div>
-</section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="hightlate">My website</span> World</h1>
+            <h3>World class web-development</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam accusantium libero vitae magnam, non
+                possimus, molestiae quasi, provident reiciendis deleniti quaerat nostrum sapiente enim? Quos soluta
+                cupiditate delectus facilis tempore.</p>
+            <a class="link-button" href="https://app.netlify.com/teams/yasinarafat71122/sites">Hire me</a>
+        </div>
+
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+    </section>
+
+    <section class="second-banner">
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum, reprehenderit similique? Officia quos
+                ducimus excepturi sed perspiciatis pariatur alias consequatur ipsam. Alias cumque voluptatem non rem vel
+                pariatur, minus earum!</p>
+            <a class="link-button" href="https://github.com/Yasin-Arafat1">DOWNLOAD RESUME</a>
+
+        </div>
+    </section>
+
+    <section class="experience-area">
+        <h1>Experience</h1>
+        <div id="full-stack" class="half-width single-experience">
+            <h1>Full Stack Web web-development</h1>
+            <h3 class="hightlate">2000-present | Pro level Web web-development</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores temporibus nemo delectus labore
+                assumenda. Officiis porro provident id, voluptates omnis qui, dicta magnam culpa repellat at, quam nam
+                eligendi. Repudiandae.</p>
+        </div>
+        <div id="Baby-web" class="half-width single-experience">
+            <h1>Baby Web developer</h1>
+            <h3 class="hightlate">2000-2021 | Programming Hero Learner</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, dolorum beatae. Ipsum id odit corrupti
+                impedit suscipit provident voluptate quisquam deserunt dolorem ratione molestias explicabo, sapiente
+                quasi cum omnis nostrum.</p>
+        </div>
+    </section>
+    <footer>
+        <p>Don't copy this</p>
+    </footer>
 </body>
 
 </html>
