--- a/index.html
+++ b/index.html
@@ -43,14 +43,12 @@
 
     <section class="experience-area">
         <h1>Experience</h1>
-        <div id="full-stack" class="half-width single-experience">
-            <h1>Full Stack Web web-development</h1>
-            <h3 class="hightlate">2000-present | Pro level Web web-development</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores temporibus nemo delectus labore
-                assumenda. Officiis porro provident id, voluptates omnis qui, dicta magnam culpa repellat at, quam nam
-                eligendi. Repudiandae.</p>
+        <div id="full-stack" class="half single-experience">
+            <h1>Ful Stack web-developer</h1> 
+              <h3 class="hightlate">2000-Present | Pro level Web web-development</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, natus molestiae voluptatem quia deserunt dolores omnis ex, est necessitatibus culpa tempore. Corrupti quis dolor modi aliquid iure necessitatibus vel laboriosam.</p>
         </div>
-        <div id="Baby-web" class="half-width single-experience">
+        <div id="Baby-web" class="half single-experience">
             <h1>Baby Web developer</h1>
             <h3 class="hightlate">2000-2021 | Programming Hero Learner</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, dolorum beatae. Ipsum id odit corrupti
@@ -58,6 +56,7 @@
                 quasi cum omnis nostrum.</p>
         </div>
     </section>
+
     <footer>
         <p>Don't copy this</p>
     </footer>
